Standardize the RecordExtractor output type contract across every input format
Every per-format extractor now produces the same Java output matrix, so the
downstream ingestion pipeline sees a uniform shape regardless of source.

Type contract (now documented on `RecordExtractor`):

| Logical value | Java output type |
|---|---|
| Boolean | `Boolean` |
| Small int (`Byte` / `Short` / `int8` / `int16` / `int32`) | `Integer` |
| Long | `Long` |
| Float | `Float` |
| Double | `Double` |
| Decimal (`BigDecimal`, `BigInteger`) | `BigDecimal` |
| String | `String` |
| Bytes (`ByteBuffer`, `ByteString`, `Binary`, …) | `byte[]` |
| Date | `java.time.LocalDate` |
| Time of day | `java.time.LocalTime` (nanosecond precision) |
| Timestamp / instant | `java.sql.Timestamp` (sub-millisecond nanos preserved) |
| Multi-value (`Collection`, array except `byte[]`) | `Object[]` (input shape preserved) |
| Map / nested record / struct | `Map<Object, Object>` |
| Null / unset | `null` |
| Anything else (Avro `Utf8`, ProtoBuf `EnumValueDescriptor`, …) | `value.toString()` |

Base contract additions (`BaseRecordExtractor.convertSingleValue`):

- Recognizes the full modern `java.time` family. `LocalDate` / `LocalTime` /
  `Timestamp` pass through; `Instant` / `OffsetDateTime` / `ZonedDateTime`
  bridge to `Timestamp` via `Timestamp.from(instant)` (lossless);
  `LocalDateTime` bridges to `Timestamp` interpreting the wall-clock as UTC
  (matches Iceberg `timestamp`, Parquet `isAdjustedToUTC=false`, Snowflake
  `TIMESTAMP_NTZ`). The `Temporal` family is gated behind a single
  `instanceof Temporal` check so the common non-temporal case skips five
  instanceof checks on the hot path.
- `Byte` / `Short` widen to `Integer` so all small ints unify behind a single
  Pinot type — every format inherits the widening.
- `BigInteger` widens to `BigDecimal` (Pinot has no `BigInteger` type;
  reachable in practice from JSON parsers).
- `convertMap` rechecks the converted key for `null` and drops the entry